Thu Apr 30 22:19:12 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/ConstantTable.java: move under entity/.

	* net/loveruby/cflat/ast/ConstantEntry.java: ditto.

	* net/loveruby/cflat/compiler/CodeGenerator.java: follow it.

	* net/loveruby/cflat/ast/StringLiteralNode.java: follow it.

	* net/loveruby/cflat/ir/StringValue.java: follow it.

	* net/loveruby/cflat/ir/IR.java: follow it.

Thu Apr 30 22:04:07 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/AbstractAssignNode.java: remove unused
	  setter setLHS.

Thu Apr 30 21:49:07 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/*.java: remove unused reference to
	  asm.Label.

Mon Apr 27 02:55:41 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/entity: new package.

	* net/loveruby/cflat/ast: move Entity and its subclasses under
	  entity/.

	* net/loveruby/cflat/ast: move Scope and its subclasses under
	  entity/.

Mon Apr 27 02:09:09 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/DefinedFunction.java: remove unused
	  method #epilogueLabel.

Mon Apr 27 02:04:26 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/asm/Type.java: new class representing
	  assembly integer types.

	* net/loveruby/cflat/asm/*.java: support it.

	* net/loveruby/cflat/ir/*.java: support it.

	* net/loveruby/cflat/compiler/IRGenerator.java: convert ast Type
	  -> asm Type.

	* net/loveruby/cflat/compiler/CodeGenerator.java: use asm Type.

Mon Apr 27 00:24:24 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: remove simple
	  delegators (to Assembler).

	* net/loveruby/cflat/asm/Assembler.java: add _byte(long), etc.

	* net/loveruby/cflat/ir/IR.java: do not export typeTable, provide
	  natural type instead.

Sun Apr 26 23:54:47 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java: use
	  ExprNode#shouldEvalutedToAddress again, it contains complex